--- a/_config.yml
+++ b/_config.yml
@@ -13,20 +13,21 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@example.com
+title: gunniwho blog
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  My name is Gunnar Palsson and this is my blog about software engineering.
+  I am an Icelandic engineer and my main topics of interest currently are
+  distributed systems and functional programming techniques.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: gunniwho
+github_username:  gunniwho
 
 # Build settings
 markdown: kramdown
 theme: minima
+minima:
+  skin: dark
 plugins:
   - jekyll-feed
 
