--- a/_config.yml
+++ b/_config.yml
@@ -14,20 +14,22 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: gunniwho blog
-description: >- # this means to ignore newlines until "baseurl:"
-  Distributed systems, functional programming, dotnet.
+description: >-
+  distributed systems, cloud native, functional programming, dotnet.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: gunniwho
-github_username:  gunniwho
 
 # Build settings
 markdown: kramdown
 remote_theme: jekyll/minima
 minima:
   skin: dark
+  social_links:
+    github: gunniwho
+    twitter: gunniwho
 plugins:
   - jekyll-feed
+  - jekyll-remote-theme
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
