fix post comment redirect

--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: gunniwho blog
 description: >-
   distributed systems, cloud native, functional programming, dotnet.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://gunniwho.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
 markdown: kramdown
